--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -138,6 +138,11 @@
   
   <% end %>
   
+  <div class="field">
+    <%= f.label :url %><br />
+    <%= f.text_field :url,:value => 'http://' %><br />
+    
+  </div>
   
   <div class="acc">
   
