--- a/app/assets/stylesheets/reveal.css
+++ b/app/assets/stylesheets/reveal.css
@@ -21,13 +21,14 @@
 		left: 50%;
 		margin-left: -300px;
 		width: 520px;
-		 background: #eee url(modal-gloss.png) no-repeat -200px -80px;
+		 background: url(txt2.jpg);
 		position: absolute;
 		z-index: 101;
 		padding: 30px 40px 34px;
 		-moz-border-radius: 1px;
 		-webkit-border-radius: 1px;
 		border-radius: 1px;
+		border: solid 5px #efefef;
 		
 		}
 		
@@ -49,16 +50,60 @@
 		} 
 		
 	.reveal-modal h1{
-		font-size:28px;
-		font-family: sans-serif;
+		font: 42px;
+		font-family: Insolent-Italic, sans-serif;
 		font-weight:bold;
 		color:#fff;
+		
+		
+		text-shadow: 0px 0px #000, 1px 1px #000, 2px 2px #000, 3px 3px #000, 4px 4px #000;
+		-webkit-font-smoothing: none;
+-webkit-font-smoothing: subpixel-antialiased;
+-webkit-font-smoothing: antialiased;
 		
 	}
 	
 	.reveal-modal h2{
-		font-size:22px;
-		color:#00ffee;
+		font-size:18px;
+		color:#000;
+		
+	}
+	
+	 .reveal-modal h3 {
+		font-size:12px;
+		color:#000;
+		
+	}
+	 
+	.reveal-modal ul { 	    
+	    margin: 0;
+        padding: 0;
+        margin-top:-10px;
+        margin-right: 2px; 
+			
+	    
+	}
+	
+	.reveal-modal ul li {	
+		
+	   list-style-type: none;
+       display:block;
+       padding: 0.6em 0;
+	   float:right;
+       margin-right: 5px;
+	   
+	   
+	 
+		
+	}
+	
+	
+	.reveal-modal p {
+		
+	  text-align:center;	
+		
+		
+		
 	}
 	
 	
