--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,3 +1,4 @@
+<% if signed_in? %>
 <h1>Listing locations</h1>
 
 <table>
@@ -20,7 +21,7 @@
     
     <td><%= link_to 'Show', location %></td>
     <td><%= link_to 'Edit', edit_location_path(location) %></td>
-    <td><%= link_to 'Destroy', location, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= button_to "delete", location, :method=>:delete, :class=>:destroy %> </td>
   </tr>
 <% end %>
 </table>
@@ -28,3 +29,4 @@
 <br />
 
 <%= link_to 'New Location', new_location_path %>
+<% end %>
