--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,3 +1,4 @@
+<% if signed_in? %>
 <h1>Listing types</h1>
 
 <table>
@@ -21,3 +22,4 @@
 <br />
 
 <%= link_to 'New Type', new_type_path %>
+<% end %>
