--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
  <div class="footmid">
   
- <p> Thrill Engine @ 2011 </p>
+ <p>  Thrill Engine &copy; 2012 </p>
  
   
   <nav class="round">   
