--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,4 +1,31 @@
 
+
+
+<script type="text/javascript">
+document.write(unescape("%3Cscript src='" + ((document.location.protocol=="https:")?"https://snapabug.appspot.com":"http://www.snapengage.com") + "/snapabug.js' type='text/javascript'%3E%3C/script%3E"));</script><script type="text/javascript">
+SnapABug.addButton("f6ceea2d-c9ef-4743-aae9-290789c914fd","1","500px");
+</script>
+
+
+
+<script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'68e77bc2-e6d6-4574-964c-79e8a966b15e'});</script>
+
+<div style="font: 11px Helvetica,Tahoma,Arial;z-index: 980000!important;cursor: pointer;margin-left: -63px;position: fixed;top: 30%;border:1px solid #ddd;color:#999;background-color:#ededed;padding:10px;border-radius:4px;"}
+<span>&nbsp;Share</span><br /><br />
+<span  class='st_facebook_large' ></span><br />
+<span  class='st_twitter_large' ></span><br />
+<span  class='st_linkedin_large' ></span><br />
+
+
+<span  class='st_tumblr_large' ></span><br />
+<br> <span  class='st_plusone_large' ></span><br />
+</div>
+
+
+
+
+
+
 <div class="div-title">
   <h3><%= link_to "Travel destinations for awesome vacations", about_path %></h3>
 </div>
