--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,10 @@
     
    <nav class="round">
     <ul>      
-      <li><%= link_to "Get Listed", about_path, :class => "listed" %> </li>
+      
       <li><%= link_to "About", about_path %> / </li>
+      
+      <li><%= link_to "Shop", "http://www.facebook.com/pages/Thrill-Engine/199223676806364?sk=app_149715688441437" %> / </li>
       
       <% if signed_in? %>
       <li><%= link_to "Profile", current_user %> / </li>
