--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -135,7 +135,7 @@
 
 <div id="myModal" class="reveal-modal">
      
-<h1> Hello! Thrill Engine is not ready yet. </h1>
+<h1> Hello! Thrill Engine is not fully ready yet. </h1>
 
 <h3> Working hard to put all things together. So you could easily book some of the most uber fun vacations - <%= link_to "read more", about_path %>.
 Sign up for the news and updates </h3>
