--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 <div class="hellobarwrapper">
 <!-- Begin MailChimp Signup Form -->
 
-<p> Welcome to Thrill Engine. Sign up for the Newsletter </p>
+<p> Hi! Signup and be one of the first to join Thrill Engine </p>
  <div id="mc_embed_signup">
    
    
