--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -16,7 +16,7 @@ SnapABug.addButton("f6ceea2d-c9ef-4743-aae9-290789c914fd","1","500px");
 
 
 <div class="div-title">
-  <h3><%= link_to "Travel destinations for awesome vacations", about_path %></h3>
+  <h3><%= link_to "Trips That Will Make You Feel Alive ", about_path %></h3>
 </div>
 
 <div class="mid">
@@ -26,10 +26,10 @@ SnapABug.addButton("f6ceea2d-c9ef-4743-aae9-290789c914fd","1","500px");
   
         <form class="filter_form">
            <%= form_for @search do |f| %>
-             <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories" %>
-             <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>
-             <%= f.collection_select :types_id_equals, Type.all, :id, :name, :include_blank => true, :prompt => "Listing Type" %>   
-           <%= submit_tag "Find Now", :class => "find" %>
+             <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "Pick a Thrill" %>
+             <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "Chose a Place" %>
+                
+           <%= submit_tag "Let's Roll", :class => "find" %>
            <% end %>
         </form>   
  
