--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,6 +16,17 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like" data-send="true" data-layout="button_count" data-width="20" data-show-faces="false" data-action="recommend" data-font="lucida grande"></div> </li>
 
+<% for image in @trip.images.limit(1) %>	
+<li><a href="http://pinterest.com/pin/create/button/?media=<%=  image.image.url(:large)  %>&description=<%= @trip.title %> in <%= @trip.location %>" class="pin-it-button" count-layout="none">Pin It</a>
+<script type="text/javascript" src="http://assets.pinterest.com/js/pinit.js"></script></li>
+
+<% end %>  
+
+
+
+
+
+
 </ul>
 
   <p id="notice"><%= notice %></p>
