--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -10,7 +10,19 @@ SnapABug.addButton("f6ceea2d-c9ef-4743-aae9-290789c914fd","1","500px");
 
 
 
+<script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'68e77bc2-e6d6-4574-964c-79e8a966b15e'});</script>
+<div style="font: 11px Helvetica,Tahoma,Arial;z-index: 980000!important;cursor: pointer;margin-left: -59px;position: fixed;top: 30%;border:0px solid #ddd;color:#fff; font-weight:bold;padding:10px;border-radius:1px; text-shadow: 1px 1px 1px #000; "}
+<span>&nbsp;Share</span><br /><br />
+<span  class='st_facebook_large' ></span><br />
+<span  class='st_twitter_large' ></span><br />
 
+<span  class='st_linkedin_large' ></span><br />
+<span  class='st_stumbleupon_large' ></span><br />
+<span  class='st_reddit_large' ></span><br />
+
+<span  class='st_tumblr_large' ></span><br />
+<span  class='st_evernote_large' ></span><br />
+</div>
 
 
 
